[gd_scene load_steps=14 format=3 uid="uid://4ayijhu8o05j"]

[ext_resource type="Texture2D" uid="uid://d3isrsejj8rlp" path="res://assets/player/idle.png" id="1_d6a2h"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_it484"]
[ext_resource type="Texture2D" uid="uid://c76ong8hwcy06" path="res://assets/player/walk01.png" id="2_x5njl"]
[ext_resource type="Texture2D" uid="uid://j8qi6nrfak0i" path="res://assets/player/walk02.png" id="3_5u1k1"]
[ext_resource type="Texture2D" uid="uid://cq31n7pg3dmeh" path="res://assets/player/walk03.png" id="4_1i1x3"]
[ext_resource type="Texture2D" uid="uid://cdxi1uw5p43qw" path="res://assets/player/walk04.png" id="5_wyewo"]
[ext_resource type="Texture2D" uid="uid://c1o60k1yqvoum" path="res://assets/player/walk05.png" id="6_s6654"]
[ext_resource type="PackedScene" uid="uid://b8ewed2x8rga" path="res://scenes/weapons.tscn" id="8_dctyt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yfh6v"]
atlas = ExtResource("1_d6a2h")
region = Rect2(0, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n4ms"]
atlas = ExtResource("1_d6a2h")
region = Rect2(24, 0, 24, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_modpc"]
atlas = ExtResource("1_d6a2h")
region = Rect2(48, 0, 24, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0c2lr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfh6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n4ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_modpc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x5njl")
}, {
"duration": 1.0,
"texture": ExtResource("3_5u1k1")
}, {
"duration": 1.0,
"texture": ExtResource("4_1i1x3")
}, {
"duration": 1.0,
"texture": ExtResource("5_wyewo")
}, {
"duration": 1.0,
"texture": ExtResource("6_s6654")
}, {
"duration": 1.0,
"texture": ExtResource("5_wyewo")
}, {
"duration": 1.0,
"texture": ExtResource("4_1i1x3")
}, {
"duration": 1.0,
"texture": ExtResource("3_5u1k1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou4c5"]
size = Vector2(20, 43)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_it484")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0c2lr")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ou4c5")

[node name="Weapons" parent="." instance=ExtResource("8_dctyt")]

[node name="MaxLife" type="Line2D" parent="."]
points = PackedVector2Array(-20, -28, 20, -28)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="LifeAmount" type="Line2D" parent="."]
points = PackedVector2Array(-20, -28, 20, -28)
width = 5.0
default_color = Color(1, 0.137255, 0.137255, 1)

[node name="HitTimer" type="Timer" parent="."]

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
